// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Telescope form rendering should render correctly 1`] = `
<Fragment>
  <styled.div>
    <TelescopeSelector
      onSelect={[Function]}
      telescopes={
        Array [
          "SALT",
        ]
      }
    />
    <InstrumentsSelector
      instruments={
        Array [
          "RSS",
        ]
      }
      onSelect={[Function]}
      selectedTelescopes={
        Array [
          "SALT",
        ]
      }
    />
    <ModeSelector
      modes={
        Array [
          "MOS",
          "Fabry Perot",
          "Spectropolarimetry",
        ]
      }
      onSelect={[Function]}
      selectedInstruments={
        Array [
          "RSS",
        ]
      }
      selectedTelescopes={
        Array [
          "SALT",
        ]
      }
    />
    <DetectorModeSelector
      detectorMode={
        Array [
          "All",
        ]
      }
      onSelect={[Function]}
      selectedInstruments={
        Array [
          "RSS",
        ]
      }
      selectedTelescopes={
        Array [
          "SALT",
        ]
      }
    />
    <Filters
      filters={
        Array [
          "All",
        ]
      }
      instruments={
        Array [
          "RSS",
        ]
      }
      onSelect={[Function]}
    />
    <FabryPerot
      onSelect={[Function]}
    />
    <RssGrating
      onSelect={[Function]}
    />
    <RssPolarimetryImaging
      onSelect={[Function]}
    />
  </styled.div>
</Fragment>
`;

exports[`Telescope form rendering should render correctly 2`] = `
<Fragment>
  <styled.div>
    <TelescopeSelector
      onSelect={[Function]}
      telescopes={
        Array [
          "Lesedi",
        ]
      }
    />
    <InstrumentsSelector
      instruments={
        Array [
          "SHOC",
        ]
      }
      onSelect={[Function]}
      selectedTelescopes={
        Array [
          "Lesedi",
        ]
      }
    />
    <ModeSelector
      modes={
        Array [
          "All",
        ]
      }
      onSelect={[Function]}
      selectedInstruments={
        Array [
          "SHOC",
        ]
      }
      selectedTelescopes={
        Array [
          "Lesedi",
        ]
      }
    />
    <DetectorModeSelector
      detectorMode={
        Array [
          "All",
        ]
      }
      onSelect={[Function]}
      selectedInstruments={
        Array [
          "SHOC",
        ]
      }
      selectedTelescopes={
        Array [
          "Lesedi",
        ]
      }
    />
    <Filters
      filters={
        Array [
          "All",
        ]
      }
      instruments={
        Array [
          "SHOC",
        ]
      }
      onSelect={[Function]}
    />
  </styled.div>
</Fragment>
`;

exports[`Telescope form rendering should render correctly 3`] = `
<Fragment>
  <styled.div>
    <TelescopeSelector
      onSelect={[Function]}
      telescopes={
        Array [
          "SALT",
        ]
      }
    />
    <InstrumentsSelector
      instruments={
        Array [
          "Salticam",
        ]
      }
      onSelect={[Function]}
      selectedTelescopes={
        Array [
          "SALT",
        ]
      }
    />
    <ModeSelector
      modes={
        Array [
          "All",
        ]
      }
      onSelect={[Function]}
      selectedInstruments={
        Array [
          "Salticam",
        ]
      }
      selectedTelescopes={
        Array [
          "SALT",
        ]
      }
    />
    <DetectorModeSelector
      detectorMode={
        Array [
          "All",
        ]
      }
      onSelect={[Function]}
      selectedInstruments={
        Array [
          "Salticam",
        ]
      }
      selectedTelescopes={
        Array [
          "SALT",
        ]
      }
    />
    <Filters
      filters={
        Array [
          "All",
        ]
      }
      instruments={
        Array [
          "Salticam",
        ]
      }
      onSelect={[Function]}
    />
  </styled.div>
</Fragment>
`;
